--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,18 +7,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
+    <style>
+        a:link,a:visited,a:hover,a:active{
+            color:white;
+        }
+    </style>
 </head>
-<body>
+<body style="background: linear-gradient(109.7deg, rgb(229, 0, 57) 1.8%, rgb(162, 91, 182) 90.2%);">
     <div class="container">
     <h1>
         URL SHRINKER
     </h1>
     <form action="/shorturls" method="POST" class="my-4 form-inline">
         <label for="urlful" class="sr-only">fullurl:</label>
-        <input required placeholder="url" type="url" name="urlful" id="urlful" class="form-control col mr-2">
-                <button  class="btn btn-success"type="ubmit">shrink</button>
+        <input required placeholder="url" type="url" name="urlful" size="100"id="urlful" class="form-control col mr-2">
+                <button  class="btn btn-success"type="submit">shrink</button>
     </form>
-    <table class="table table-striped table-responsive">
+    <table class="table  table-stripped table-responsive">
         <thead>
             <tr>
                 <th>full url</th>
@@ -26,7 +31,7 @@
                 <th>clicks</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody style="color:white">
             <% shortUrls.forEach(shortUrl=>{ %>
             <tr>
                 <td><a href="<%= shortUrl.full %>"><%= shortUrl.full %></a></td>
